hipfile/include/hipfile.h

/*!
 * @brief Error status returned from hipFile API calls
 * @ingroup error
 *
 * @note This struct has the `[[nodiscard]]` attribute in C++ >= 17 and
 *       C >= 23 so unhandled return values will generate warnings
 */
typedef struct __HIPFILE_NODISCARD hipFileError {
    hipFileOpError_t err;         //!< Errors related to hipFile or the GPU IO driver
    hipError_t       hip_drv_err; //!< Errors related to the GPU driver
} hipFileError_t;
/*! @} */

// ***********************************************************************
//  FILE HANDLE API
// ***********************************************************************

/*!
 * @brief IO operations for RDMA filesystems
 * @ingroup file
 *
 * @internal
 * - cuFile has intentionally omitted names for some of the parameters.
 * - Need to better understand the purpose of this function before should feel
 *   comfortable publishing it. If we don't need it for the first release,
 *   perhaps it should be removed.
 * TODO:
 * - typedef the function pointers so we can more easily add Doxygen
 *   for the parameters
 * @endinternal
 */
typedef struct hipFileFSOps {
    /*!
     * Type of remote FS used. If NULL, use fstat to discover.
     */
    const char *(*fs_type)(void *handle);
    /*!
     * Get a list of host RDMA addresses. If NULL, use any address.
     */
    int (*getRDMADeviceList)(void *handle, struct sockaddr **hostaddrs);
    /*!
     * Get the assigned priority of a RDMA device. If -1, there is no preference.
     */
    int (*getRDMADevicePriority)(void *handle, char *, size_t, hoff_t, struct sockaddr *hostaddr);
    /*!
     * Read from the remote filesystem. If NULL, use the Linux VFS.
     */
    ssize_t (*read)(void *handle, char *, size_t, hoff_t, hipFileRDMAInfo_t *);
    /*!
     * Write to the remote filesystem. If NULL, use the Linux VFS.
     */
    ssize_t (*write)(void *handle, const char *, size_t, hoff_t, hipFileRDMAInfo_t *);
} hipFileFSOps_t;
/*!
 * @brief Type of file handle being used
 * @ingroup file
 */
typedef enum hipFileFileHandleType {
    hipFileHandleTypeOpaqueFD    = 1, //!< POSIX file descriptor
    hipFileHandleTypeOpaqueWin32 = 2, //!< Win32 HANDLE file handle
    hipFileHandleTypeUserspaceFS = 3, //!< Userspace RDMA filesystem
} hipFileFileHandleType_t;
/*!
 * @brief Top-level structure for performing GPU IO
 * @ingroup file
 *
 *  hipFileHandleTypeOpaqueFD    -> handle.fd non-negative, fs_ops ignored
 *  hipFileHandleTypeOpaqueWin32 -> handle.hFile non-NULL, fs_ops ignored
 *  hipFileHandleTypeUserspaceFS -> handle.fd non-negative, fs_ops non-NULL
 */
typedef struct hipFileDescr {
    hipFileFileHandleType_t type; //!< Type of file handle being used
    union {
        int   fd;                 //!< POSIX file descriptor
        void *hFile;              //!< Win32 HANDLE file handle
    } handle;                     //!< Union containing the OS-specific file handle
    const hipFileFSOps_t *fs_ops; //!< Userspace RDMA filesystem operations
} hipFileDescr_t;
/*!
 * @brief Opaque file handle used by the GPU IO driver/library
 * @ingroup file
 */
typedef void *hipFileHandle_t;
/*!
 * @brief Registers an open file for GPU IO
 * @ingroup file
 *
 * @note If the library has not already been initialized, the first call to
 *       `hipFileHandleRegister()` will initialize the library and increment
 *       the reference count.
 *
 * @param [out] fh    Opaque file handle for GPU IO operations
 * @param [in]  descr Parameters for opening the file
 *
 * @return hipFileError_t describing the result of the operation
 * @return hipFileSuccess
 * @return hipFileDriverNotInitialized
 * @return hipFileIONotSupported
 * @return hipFileInvalidFileType
 * @return hipFileInvalidFileOpenFlag
 * @return hipFileInvalidValue
 * @return hipFileHandleAlreadyRegistered
 */
HIPFILE_API
hipFileError_t hipFileHandleRegister(hipFileHandle_t *fh, hipFileDescr_t *descr);
/*!
 * @brief Deregisters a file from GPU IO
 * @ingroup file
 *
 * @param [in] fh Opaque file handle for GPU IO operations
 */
HIPFILE_API
void hipFileHandleDeregister(hipFileHandle_t fh);
/*!
 * @brief Registers a GPU memory region to be used with GPU IO
 * @ingroup file
 *
 * The memory region should be allocated by the user before being passed to the API call
 *
 * @note If the library has not already been initialized, the first call to
 *       `hipFileBufRegister()` will initialize the library and increment
 *       the reference count.
 *
 * @param [in] buffer_base Base address of the GPU buffer
 * @param [in] length      Size of the allocated buffer in bytes
 * @param [in] flags       Control flags for this buffer
 *
 * @return hipFileError_t describing the result of the operation
 * @return hipFileSuccess
 * @return hipFileDriverError
 * @return hipFileHipDriverError
 * @return hipFileHipMemoryTypeInvalid
 * @return hipFileHipPointerRangeError
 * @return hipFileInvalidMappingSize
 * @return hipFileInvalidValue
 * @return hipFileMemoryAlreadyRegistered
 * @return hipFileInternalError
 * @return hipFileGPUMemoryPinningFailed
 */
HIPFILE_API
hipFileError_t hipFileBufRegister(const void *buffer_base, size_t length, int flags);
/*!
 * @brief Deregisters a GPU memory region from being used with GPU IO
 * @ingroup file
 *
 * @param [in] buffer_base Base address of the GPU buffer
 *
 * @return hipFileSuccess
 * @return hipFileInvalidValue
 * @return hipFileMemoryNotRegistered
 * @return hipFileInternalError
 */
HIPFILE_API
hipFileError_t hipFileBufDeregister(const void *buffer_base);
/*!
 * @brief Synchronously read data from a file into a GPU buffer
 * @ingroup file
 *
 * @param [in] fh            Opaque file handle for GPU IO operations
 * @param [in] buffer_base   Base address of the GPU buffer
 * @param [in] size          Number of bytes that should be read
 * @param [in] file_offset   Offset into the file that should be read from
 * @param [in] buffer_offset Offset of the GPU buffer that that the data should be written to
 *
 * @return if >= 0: Number of bytes read
 * @return if -1:   System error (check `errno` for the specific error)
 * @return else:    Negative value of the related hipFileOpError_t
 */
HIPFILE_API
ssize_t hipFileRead(hipFileHandle_t fh, void *buffer_base, size_t size, hoff_t file_offset,
                    hoff_t buffer_offset);
/*!
 * @brief Synchronously write data from a GPU buffer to a file
 * @ingroup file
 *
 * @param [in] fh            Opaque file handle for GPU IO operations
 * @param [in] buffer_base   Base address of the GPU buffer
 * @param [in] size          Number of bytes that should be written
 * @param [in] file_offset   Offset into the file that should be written to
 * @param [in] buffer_offset Offset of the GPU buffer that the data should be read from
 *
 * @return if >= 0: Number of bytes written
 * @return if -1:   System error (check `errno` for the specific error)
 * @return else:    Negative value of the related hipFileOpError_t
 */
HIPFILE_API
ssize_t hipFileWrite(hipFileHandle_t fh, const void *buffer_base, size_t size, hoff_t file_offset,
                     hoff_t buffer_offset);
// ***********************************************************************
//  GPU IO DRIVER API
// ***********************************************************************

/*!
 * @brief Initialize the GPU IO driver for this process
 * @ingroup driver
 *
 * Each call to `hipFileDriverOpen()` increments the library's reference
 * count. If a call to `hipFileDriverOpen()` results in the reference count
 * transitioning from zero to one, the library's state will be initialized.
 *
 * Calling `hipFileDriverOpen()` is optional. The first call to
 * `hipFileBufRegister()` or `hipFileHandleRegister()` will trigger
 * library initialization and increment the library's reference count.
 *
 * @return hipFileSuccess
 * @return hipFileDriverNotInitialized
 * @return hipFileDriverVersionMismatch
 * @return hipFilePlatformNotSupported
 * @return hipFileHipDriverError
 * @return hipFilePermissionDenied
 * @return hipFileDriverSetupError
 */
HIPFILE_API
hipFileError_t hipFileDriverOpen(void);
/*!
 * @brief Close the GPU IO driver for this process
 * @ingroup driver
 *
 * Each call to `hipFileDriverClose()` decrements the library's reference
 * count. If a call to `hipFileDriverClose()` results in the reference count
 * transitioning from one to zero, the library's state will be destroyed.
 *
 * Explicitly closing the library is not required; the library's state will be
 * destroyed automatically at program exit.
 *
 * @return hipFileSuccess
 * @return hipFileDriverClosing
 * @return hipFileDriverNotInitialized
 */
HIPFILE_API
hipFileError_t hipFileDriverClose(void);
/*!
 * @brief The status of a batch IO operation
 * @ingroup batch
 */
typedef enum hipFileStatus {
    hipFileWaiting  = 1 << 0, //!< Batch IO operation pending acceptance
    hipFilePending  = 1 << 1, //!< Batch IO operation accepted and queued
    hipFileInvalid  = 1 << 2, //!< Batch IO operation was rejected for being invalid or could not be queued
    hipFileCanceled = 1 << 3, //!< Batch IO operation was canceled
    hipFileComplete = 1 << 4, //!< Batch IO operation completed
    hipFileTimeout  = 1 << 5, //!< Batch IO operation timed out
    hipFileFailed   = 1 << 6, //!< Batch IO operation failed
} hipFileStatus_t;